Refactor and change icon size

--- a/app/src/main/res/layout/activity_weather_fore_cast.xml
+++ b/app/src/main/res/layout/activity_weather_fore_cast.xml
@@ -47,6 +47,7 @@
         android:id="@+id/fetchWeather"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:enabled="false"
         android:text="@string/weather_fetch_button_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
